--- a/css/style.css
+++ b/css/style.css
@@ -53,49 +53,12 @@ body {
 
 /* *************** mobile version - mobile fisrt design ************** */
 
-.Toolbar {
-  display: flex;
-  justify-content: space-between;
-  width: 100%;
-  align-items: center;
-  background-color: var(--color-back-bars);
-  padding: 1rem;
-  padding-right: 1rem;
-  font-family: var(--font-toolbar);
-  color: var(--color-font-menu);
+.navbar {
   animation: slideInLeft 1s;
 }
 
-.logo {
+.navbar-brand {
   animation: slideInLeft 2s 0.3s;
-}
-
-.Mylogo {
-  padding-left: 1.5rem;
-  font-size: 1.2rem;
-  color: var(--color-font-title2);
-  font-family: var(--font-title2);
-  background-color: var(--color-back-bars);
-  text-decoration: none;
-}
-
-.menu-pc {
-  display: none;
-  font-size: 0.9rem;
-  color: var(--color-font-menu);
-  justify-content: flex-end;
-  align-items: center;
-  order: 99;
-}
-
-.menu-mobile {
-  background-color: var(--color-back-bars);
-}
-
-.burguer-menu {
-  margin-right: 1rem;
-  background-color: var(--color-back-bars);
-  height: 1rem;
 }
 
 .main-frame {
@@ -169,7 +132,6 @@ body {
 
 .recentworks_cnt {
   padding: 7.5rem 1.5rem;
-  background-color: var(--color-background_clear);
 }
 
 .RecentWorksSectionTitle {
@@ -195,73 +157,6 @@ body {
   border-bottom: 1px solid var(--color-line-div);
 }
 
-/*************** Grid layout for  project cards ********************/
-
-/* The grid container */
-.grid_works {
-  align-items: center;
-  justify-items: center;
-  display: grid;
-  grid-template-areas:
-    'header'
-    'left'
-    'middle'
-    'right';
-  grid-column-gap: 1rem;
-}
-
-/* Style the left column */
-.header1 {
-  grid-area: header;
-  display: flex;
-  flex-direction: column;
-  width: 100%;
-}
-
-.left {
-  grid-area: left;
-}
-
-/* Style the middle column */
-.middle {
-  grid-area: middle;
-}
-
-/* Style the right column */
-.right {
-  grid-area: right;
-}
-
-/* ****** main card work *********** */
-
-.cnt_info_main_card {
-  width: 100%;
-  margin-bottom: 2.8rem;
-}
-
-.cnt_img_main_card {
-  width: auto;
-}
-
-.main_card_cnt_img {
-  width: 100%;
-}
-
-.MainCardTitle {
-  font-family: var(--font-card-title);
-  font-size: 2rem;
-  font-weight: lighter;
-  color: var(--color-main-card-title);
-  padding-top: 1rem;
-}
-
-.MainCardDescrip {
-  font-size: 0.9rem;
-  font-family: var(--font-card-text);
-  color: var(--color-main-card-text);
-  padding-top: 0.7rem;
-}
-
 .list_feat {
   width: 100%;
   display: flex;
@@ -274,143 +169,31 @@ body {
   margin-left: 0.5rem;
 }
 
-.li_btn {
-  list-style: none;
-  font-family: var(--font-text1);
-  color: var(--color-main-card-text);
-  font-weight: bolder;
-  font-size: 0.9rem;
-  padding: 0.5rem 0.8rem;
-  border: solid 1px var(--color-main-card-title);
-  margin-right: 0.8rem;
-  font-style: normal;
-}
-
-.li_btn_2 {
-  list-style: none;
-  padding: 8px;
-  color: var(--color-font-text1_card);
-  background-color: var(--color-back-btn-card);
-  border: none;
-  margin-right: 0.7rem;
-  font-family: var(--font-text1);
-  font-style: normal;
-}
-
-/******************* Cards for other works ***************************/
-
-.sec_card_cnt {
-  display: flex;
-  flex-direction: column-reverse;
-  background-size: cover;
-  margin-bottom: 1.5rem;
-  min-height: 386px;
-  max-width: 435px;
-  justify-self: center;
+.card {
   transition: scale 1s ease;
 }
 
-.sec_card_cnt:hover {
+.card:hover {
   scale: 1.05;
 }
 
 /****************************************************************   */
 
-.work-1 {
-  background: var(--card-gradient), url("../images/img-ph1.png") no-repeat center;
-  background-size: cover;
-}
-
-.work-2 {
-  background: var(--card-gradient), url("../images/img-ph1.png") no-repeat center;
-}
-
-.work-3 {
-  background: var(--card-gradient), url("../images/img-ph1.png") no-repeat center;
-}
-
-.work-4 {
-  background: var(--card-gradient), url("../images/img-ph1.png") no-repeat center;
-}
-
-.work-5 {
-  background: var(--card-gradient), url("../images/img-ph1.png") no-repeat center;
-}
-
-.work-6 {
-  background: var(--card-gradient), url("../images/img-ph1.png") no-repeat center;
-}
-
-/* ************** Fonts and config for cards ******************* */
-.cnt_info_card {
-  padding-top: 5rem;
-  padding-left: 1rem;
-  padding-right: 1rem;
-}
-
-.Title1_card {
-  color: var(--color-font-title1_card);
-  font-family: var(--font-card-title);
-  font-size: 2rem;
-  font-weight: 300;
-}
-
-.Title2_card {
-  color: var(--color-font-title1_card);
-  font-family: var(--font-card-title);
-  font-size: 2rem;
-  font-weight: 300;
-}
-
-.CardDescrip {
-  color: var(--color-font-text1_card);
-  font-family: var(--font-card-text);
-  font-size: 1rem;
-  padding-top: 0.7rem;
-}
-
-/********************** buttons for card ********************/
-
 .SeeProjectBtn {
-  display: block;
   background-color: var(--color-font-title1);
   border: 1px solid var(--color-font-title1);
   font-family: var(--font-btn);
   font-weight: bold;
   padding: 0.75rem;
-  text-decoration: none;
   color: var(--color-font-text1_card);
   transition: transform 0.4s ease;
-  text-align: center;
   letter-spacing: 0.1rem;
-}
-
-/********* general config to btns  ***********/
-
-.BtnClass {
-  font-weight: bold;
-  text-decoration: none;
-  width: fit-content;
-  transition: transform 0.8s ease;
-}
-
-.project_btn_2 {
-  color: var(--color-font-menu);
-  font-weight: bold;
-  text-decoration: none;
-  transition: transform 0.8s ease;
 }
 
 .SeeProjectBtn:hover {
   border: 1px solid var(--color-btn-normal);
   background-color: var(--color-btn-hover);
   color: var(--color-font-title1);
-  cursor: pointer;
-}
-
-.SeeProjectBtn:active {
-  background-color: var(--color-btn-active);
-  color: var(--color-btn-disabled);
   cursor: pointer;
 }
 
@@ -618,19 +401,6 @@ body {
 @media screen and (min-width: 768px) {
   /********** M.Q menu and first page ****************/
 
-  .menu-mobile {
-    display: none;
-  }
-
-  .logo {
-    padding-left: 10%;
-  }
-
-  .menu-pc {
-    display: flex;
-    padding-right: 10%;
-  }
-
   .content1 {
     flex-direction: row;
     background-image: url("../images/background.svg");
@@ -694,37 +464,6 @@ body {
     width: 1fr;
   }
 
-  .grid_works {
-    display: grid;
-    grid-template-areas:
-      'header header header'
-      'left middle right';
-    gap: 1rem;
-    justify-content: space-around;
-  }
-
-  .header1 {
-    display: flex;
-    flex-direction: row;
-    width: 90vw;
-  }
-
-  .cnt_img_main_card {
-    flex-basis: 70%;
-  }
-
-  .cnt_info_main_card {
-    flex-basis: 30%;
-    padding: 0 1.5rem;
-  }
-
-  .sec_card_cnt {
-    /* margin: 1.3rem 1rem; */
-    min-height: 386px;
-    max-width: 435px;
-    justify-self: center;
-  }
-
   /********************** about *******************/
   .about_cnt {
     background-image: url("../images/about-me-desktop-img.svg");
@@ -772,15 +511,6 @@ body {
     margin: 0 1rem;
   }
 
-  .form_input_fields {
-    padding-top: 0;
-    margin: 0 1rem;
-  }
-
-  .project_btn_submit {
-    align-self: flex-start;
-  }
-
   /************* footer ************/
   .footer-icon:hover {
     transform: translateY(-0.5rem);
@@ -803,34 +533,3 @@ body {
   }
 }
 
-/*********************** high resolution ***********************/
-
-/************** only increases a litle font sizes **************/
-
-@media screen and (min-width: 992px) {
-  .menu-mobile {
-    display: none;
-  }
-
-  .Toolbar {
-    height: 4.5rem;
-  }
-
-  .socialmediaicon {
-    height: 1.5rem;
-    width: auto;
-  }
-
-  .big-title {
-    font-size: 4.5rem;
-  }
-
-  .Supportingtext {
-    font-size: 2rem;
-  }
-
-  .Simpletext {
-    padding-top: 0.7rem;
-    font-size: 1.25rem;
-  }
-}
